Fix Schema container scrollbar
- Move snac-columns-container inside schema container

--- a/src/resources/module/styles/dialogs/schema-alignment-dialog.css
+++ b/src/resources/module/styles/dialogs/schema-alignment-dialog.css
@@ -77,7 +77,7 @@
   background-color: #9bcaf2;
 }
 
-.schema-alignment-dialog-columns-area-resource.snac-tab, 
+.schema-alignment-dialog-columns-area-resource.snac-tab,
 .schema-alignment-dialog-columns-area-constellation.snac-tab{
   /* border-left: 0;
   border-right: 0; */
@@ -106,7 +106,7 @@
 }
 
 
-.schema-alignment-dialog-columns-area-resource--ref.snac-tab, 
+.schema-alignment-dialog-columns-area-resource--ref.snac-tab,
 .schema-alignment-dialog-columns-area-constellation--ref.snac-tab{
   border-left: 0;
   border-right: 0;
@@ -121,7 +121,6 @@
 }
 
 .snac-columns-container{
-  height: 350px;
   display: flex;
 }
 
@@ -607,7 +606,7 @@ div.schema-alignment-dialog-preview {
     display: inline-block;
     border-bottom: 1px dotted black;
   }
-  
+
   .tooltip .tooltiptext {
     visibility: hidden;
     width: 300px;
@@ -621,7 +620,7 @@ div.schema-alignment-dialog-preview {
     top: -5px;
     left: 110%;
   }
-  
+
   .tooltip .tooltiptext::after {
     content: "";
     position: absolute;
